Fix height of map and eliminate scrollbars

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -147,6 +147,10 @@ body, html {
   transition:background-color $medium-transition;
 }
 
+body.index {
+  overflow: hidden;
+}
+
 .session-container {
   position: relative;
 }
